<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sfs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    >


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        tools:layout_editor_absoluteX="-41dp" />

    <TextView
        android:id="@+id/dfsdfds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:text="Measure Date"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Measure TIme"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/dfsdfds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dfsdfds"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/systolic"
        android:layout_width="330dp"
        android:layout_height="50dp"


        android:background="@drawable/round_corner_edit_text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Systolic"
        android:inputType="numberSigned"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <ImageView
        android:id="@+id/requiredSystolic"
        android:layout_width="12dp"
        android:layout_height="13dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:alpha="0.55"
        android:src="@drawable/required_circle"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/systolic"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="@+id/systolic"
        app:layout_constraintTop_toTopOf="@+id/systolic" />

    <ImageView
        android:id="@+id/requiredDiastolic"
        android:layout_width="12dp"
        android:layout_height="13dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:alpha="0.55"
        android:elevation="1dp"
        android:src="@drawable/required_circle"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/diastolic"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="@+id/diastolic"
        app:layout_constraintTop_toTopOf="@+id/diastolic" />

    <ImageView
        android:id="@+id/requiredPulse"
        android:layout_width="12dp"
        android:layout_height="13dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:alpha="0.55"
        android:elevation="1dp"
        android:src="@drawable/required_circle"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/pulse"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="@+id/pulse"
        app:layout_constraintTop_toTopOf="@+id/pulse" />

    <EditText
        android:id="@+id/pulse"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner_edit_text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Pulse"
        android:inputType="numberSigned"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/diastolic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/diastolic"
        app:layout_constraintTop_toBottomOf="@+id/diastolic"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="330dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_corner_edit_text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Notes (maximum 20 character)"
        android:inputType="textMultiLine"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pulse"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pulse"
        app:layout_constraintTop_toBottomOf="@+id/pulse"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:background="@drawable/save_button"
        android:textStyle="bold"
        android:text="Save"
        android:textColor="#000000"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/notes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/notes"
        app:layout_constraintTop_toBottomOf="@+id/notes"
        app:layout_constraintVertical_bias="0.456" />

    <EditText
        android:id="@+id/diastolic"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner_edit_text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Diastolic"
        android:inputType="numberSigned"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/systolic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/systolic"
        app:layout_constraintTop_toBottomOf="@+id/systolic"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:text="Record"
        android:textColor="#A701F5"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toStartOf="@+id/tickButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:textStyle="bold"
        android:text="Create"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/tickButton"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/tick_mark" />

    <EditText
        android:id="@+id/date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/round_corner_edit_text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Date"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/systolic"

        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/time"
        android:backgroundTint="@color/white"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_edit_text"
        android:ems="10"
        android:hint="Time"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/systolic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.301" />

</androidx.constraintlayout.widget.ConstraintLayout>